[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Ebene 1.png" type="Texture" id=1]
[ext_resource path="res://UI/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Menu.gd" type="Script" id=3]
[ext_resource path="res://Audio/Music/MenuMusic.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
extra_spacing_char = 6
extra_spacing_space = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_top = 1
extra_spacing_space = 6
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 240.0 ],
"_edit_vertical_guides_": [ 427.0 ]
}

[node name="Ebene1" type="Sprite" parent="."]
position = Vector2( 428.082, 238.75 )
scale = Vector2( 0.678584, 0.678571 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 528.0
margin_top = 200.0
margin_right = 713.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 101.0
margin_top = 67.0
margin_right = 754.0
margin_bottom = 135.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 2 )
text = "Energie Carrier"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSwitch" type="Button" parent="."]
visible = false
margin_left = 709.0
margin_top = 418.0
margin_right = 786.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 3 )
text = "Sound"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSwitch" type="Button" parent="."]
visible = false
margin_left = 708.0
margin_top = 444.0
margin_right = 790.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 3 )
text = "Music"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundStatus" type="Label" parent="."]
visible = false
modulate = Color( 0.494118, 1, 0.690196, 1 )
margin_left = 794.0
margin_top = 421.0
margin_right = 834.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 4 )
text = "On"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicStatus" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.490196, 0.490196, 1 )
margin_left = 795.0
margin_top = 448.0
margin_right = 835.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 4 )
text = "On"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 427, 240 )
stream = ExtResource( 4 )
volume_db = -15.0

[node name="Label2" type="Label" parent="."]
margin_left = 98.0
margin_top = 176.0
margin_right = 429.0
margin_bottom = 349.0
custom_fonts/font = SubResource( 5 )
text = "Oh no, someone cut the power line to the electric car charging station.
You have to help out and carry batteries from another power station to the charging station. But don't get run over by a car."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="SoundSwitch" to="." method="_on_SoundSwitch_pressed"]
[connection signal="pressed" from="MusicSwitch" to="." method="_on_MusicSwitch_pressed"]
